<resources>
    <string name="app_name">Notes</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"


    </string>
    <string name="action_settings">Settings</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <integer name="screen_delay">2000</integer>
    <string name="title_activity_notes_view">NotesViewActivity</string>

    <string name="notest_title">Title</string>
    <string name="notest_description">Description</string>

    <string name="error_title">Please provide title to add a note</string>

    <string name="store_success">Your note has been saved successfully</string>
    <string name="delete">Your note has been deleted</string>

    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_conf_message">Do you want to delete this record ?</string>
</resources>
